--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,7 +1,7 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-<head>
+  <head>
     <meta charset="utf-8">
     <title>{{ title }}</title>
     <meta name="description" content="">
@@ -14,16 +14,17 @@
 
     <link rel="manifest" href="/site.webmanifest">
     <link rel="apple-touch-icon" href="/icon.png">
-    <!-- Place favicon.ico in the root directory -->
+      <!-- Place favicon.ico in the root directory -->
 
+    <link rel="stylesheet" href="https://use.typekit.net/tas4azr.css">
     <link rel="stylesheet" href="/style.css">
 
     <meta name="theme-color" content="#fafafa">
-</head>
+  </head>
 
-<body>
+  <body class="font-sans bg-blue p-5 pt-10 flex justify-center w-full">
     {{ page_content }}
     <script src="/scripts/main.js" type="module"></script>
-</body>
+  </body>
 
 </html>
