--- a/pages/index.liquid
+++ b/pages/index.liquid
@@ -47,7 +47,7 @@
       </span>
     </div>
     <div id="error" class="text-2xl text-red col-span-3 hidden"></div>
-    <div id="success" class="text-2xl text-red col-span-3 hidden"></div>
+    <div id="success" class="text-2xl text-blue col-span-3 hidden"></div>
     <button id="signup" class="disabled opacity-10 bg-red text-white flex items-center justify-center text-2xl col-span-3 p-8 rounded-xl hover:shadow-2xl active:shadow-none">LOOKS GREAT SIGN ME UP</button>
   </div>
 </div>
