--- a/pages/index.liquid
+++ b/pages/index.liquid
@@ -27,7 +27,7 @@
       <button data-date="Aug 9" class="rounded-xl px-5 py-2">Aug 9th</button>
     </div>
     <div id="times" class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
-      <button data-time="3:40 PM" class="bg-red text-white rounded-xl px-5 py-2">3:40 PM</button>
+      <button data-time="3:40 PM" class="bg-red text-white text-gray-400 rounded-xl px-5 py-2">3:40 PM</button>
       <button data-time="4:20 PM" class="rounded-xl px-5 py-2">4:20 PM</button>
       <button data-time="5:00 PM" class="rounded-xl px-5 py-2">5:00 PM</button>
       <button data-time="5:40 PM" class="rounded-xl px-5 py-2">5:40 PM</button>
