--- a/pages/index.liquid
+++ b/pages/index.liquid
@@ -1,6 +1,6 @@
 {% layout 'theme' title: "Rigsketball Signup" %}
 
-<div class="relative flex flex-col max-w-screen-md gap-6 justify-center bg-yellow text-blue p-10 ring-2 ring-red">
+<div class="py-10 px-4 lg:px-10 relative flex flex-col max-w-screen-md gap-6 justify-center bg-yellow text-blue ring-2 ring-red">
   <div id="loader" class="absolute size-full top-0 left-0 transition-opacity flex justify-center opacity-0 pointer-events-none">
     <h1 class="absolute top-20 z-10 text-yellow text-2xl bold">Get Ready for Fun...</h1>
     <canvas class="absolute size-full top-0"></canvas>
@@ -9,19 +9,25 @@
     Rigsketball 2024 Signup
   </h1>
   <div class="grid grid-cols-3 gap-6">
-    <h2 class="flex items-center justify-end text-2xl">BAND NAME</h2>
+    <h2 class="flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">BAND NAME</h2>
     <input
       id="name"
       type="text"
-      class="p-2 text-2xl col-span-2 ring-2 ring-red"
+      class="p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
       placeholder="Disturbed Earth" />
-    <h2 class="flex items-center justify-end text-2xl">EMAIL ADDRESS</h2>
+    <h2 class="flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">EMAIL ADDRESS</h2>
     <input
       id="email"
       type="email"
-      class="p-2 text-2xl col-span-2 ring-2 ring-red"
+      class="p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
       placeholder="hello@rigsketball.com" />
-    <h2 class="bg-blue text-white flex items-center justify-center text-2xl col-span-3">FIRST ROUND DATE AND TIME</h2>
+    <h2 class="flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">PHONE NUMBER</h2>
+    <input
+      id="phone"
+      type="phone"
+      class="p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
+      placeholder="503-867-5309" />
+    <h2 class="p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">FIRST ROUND DATE AND TIME</h2>
     <div id="dates" class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
       <button data-date="Aug 8" class="bg-red text-white rounded-xl px-5 py-2">Aug 8th</button>
       <button data-date="Aug 9" class="rounded-xl px-5 py-2">Aug 9th</button>
@@ -34,20 +40,20 @@
       <button data-time="6:20 PM" class="rounded-xl px-5 py-2">6:20 PM</button>
       <button data-time="7:00 PM" class="rounded-xl px-5 py-2">7:00 PM</button>
     </div>
-    <h2 class="bg-blue text-white flex items-center justify-center text-2xl col-span-3">SECOND ROUND DATE AND TIME</h2>
+    <h2 class="p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">SECOND ROUND DATE AND TIME</h2>
     <div class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
       <span id="second-round" class="rounded-xl px-5 py-2">Aug 10th
         <span id="second-round-time">3:40 PM</span>
       </span>
     </div>
-    <h2 class="bg-blue text-white flex items-center justify-center text-2xl col-span-3">THIRD ROUND DATE AND TIME</h2>
+    <h2 class="p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">THIRD ROUND DATE AND TIME</h2>
     <div class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
       <span id="third-round" class="rounded-xl px-5 py-2">Aug 11th
         <span id="third-round-time">4:20 PM</span>
       </span>
     </div>
-    <div id="error" class="text-2xl text-red col-span-3 hidden"></div>
-    <div id="success" class="text-2xl text-blue col-span-3 hidden"></div>
+    <div id="error" class="p-2 text-2xl text-red col-span-3 hidden"></div>
+    <div id="success" class="p-2 text-2xl text-blue col-span-3 hidden"></div>
     <button id="signup" class="disabled opacity-10 bg-red text-white flex items-center justify-center text-2xl col-span-3 p-8 rounded-xl hover:shadow-2xl active:shadow-none">LOOKS GREAT SIGN ME UP</button>
   </div>
 </div>
