add waitlist when full

--- a/pages/index.liquid
+++ b/pages/index.liquid
@@ -9,33 +9,36 @@
     Rigsketball 2024 Signup
   </h1>
   <div class="grid grid-cols-3 gap-6">
-    <div id="full" class="hidden bg-yellow col-span-3">
-      <div class="bg-red text-white flex items-center justify-center text-2xl col-span-3 p-8">WE'RE ALL FULL UP!</div>
-    </div>
-    <h2 class="hide-when-full flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">BAND NAME</h2>
+    <h2 class="flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">BAND NAME</h2>
     <input
       id="name"
       type="text"
-      class="hide-when-full p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
+      incremental="incremental"
+      class="p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
       placeholder="Disturbed Earth" />
-    <h2 class="hide-when-full flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">EMAIL ADDRESS</h2>
+    <h2 class="flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">EMAIL ADDRESS</h2>
     <input
       id="email"
       type="email"
-      class="hide-when-full p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
+      incremental="incremental"
+      class="p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
       placeholder="hello@rigsketball.com" />
-    <h2 class="hide-when-full flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">PHONE NUMBER</h2>
+    <h2 class="flex items-center md:justify-end text-2xl col-span-3 md:col-span-1">PHONE NUMBER</h2>
     <input
       id="phone"
       type="phone"
-      class="hide-when-full p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
+      incremental="incremental"
+      class="p-2 text-2xl col-span-3 md:col-span-2 ring-2 ring-red flex-1"
       placeholder="503-867-5309" />
-    <h2 class="p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">FIRST ROUND DATE AND TIME</h2>
-    <div id="dates" class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
+    <div id="full" class="hidden bg-yellow col-span-3">
+      <div class="bg-red text-white flex items-center justify-center text-2xl col-span-3 p-8">Rigsketball 2024 is all full up! Never fear, sign up for the wait-list and we will contact you when someone drops out.</div>
+    </div>
+    <h2 class="hide-when-full p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">FIRST ROUND DATE AND TIME</h2>
+    <div id="dates" class="hide-when-full flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
       <button data-date="Aug 8" class="bg-red text-white rounded-xl px-5 py-2">Aug 8th</button>
       <button data-date="Aug 9" class="rounded-xl px-5 py-2">Aug 9th</button>
     </div>
-    <div id="times" class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
+    <div id="times" class="hide-when-full flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
       <button data-time="4:20 PM" class="bg-red text-white text-gray-400 rounded-xl px-5 py-2">4:20 PM</button>
       <button data-time="5:00 PM" class="rounded-xl px-5 py-2">5:00 PM</button>
       <button data-time="5:40 PM" class="rounded-xl px-5 py-2">5:40 PM</button>
@@ -43,14 +46,14 @@
       <button data-time="7:00 PM" class="rounded-xl px-5 py-2">7:00 PM</button>
       <button data-time="7:40 PM" class="rounded-xl px-5 py-2">7:40 PM</button>
     </div>
-    <h2 class="p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">SECOND ROUND DATE AND TIME</h2>
-    <div class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
+    <h2 class="hide-when-full p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">SECOND ROUND DATE AND TIME</h2>
+    <div class="hide-when-full flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
       <span id="second-round" class="rounded-xl px-5 py-2">Aug 10th
         <span id="second-round-time">3:40 PM</span>
       </span>
     </div>
-    <h2 class="p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">THIRD ROUND DATE AND TIME</h2>
-    <div class="flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
+    <h2 class="hide-when-full p-2 bg-blue text-white flex items-center justify-center text-2xl col-span-3">THIRD ROUND DATE AND TIME</h2>
+    <div class="hide-when-full flex items-center justify-center text-2xl col-span-3 gap-4 flex-wrap">
       <span id="third-round" class="rounded-xl px-5 py-2">Aug 11th
         <span id="third-round-time">4:20 PM</span>
       </span>
